--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,11 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "RD's Barbershop",
+  "name": "RD's Barbershop",
+ 
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "../src/static/images/RDsLogo.png",
+      
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
@@ -13,3 +15,4 @@
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
+
