--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "rds-barber-shop",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chadlof.github.io/rds-barber-shop/",
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-image": "^1.3.1",
@@ -13,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build"
   }
 }
